Alleviated problem of graphics painting over listing & I/O pane